Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/morgler/Gixtra-Landingpage">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/morgler/gixtra">View on GitHub</a>
 
           <h1 id="project_title">Gixtra</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/morgler/Gixtra-Landingpage/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/morgler/Gixtra-Landingpage/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/morgler/gixtra/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/morgler/gixtra/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -31,8 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="impressum" class="anchor" href="#impressum"><span class="octicon octicon-link"></span></a>Impressum</h3>
+        <h2>
+<a name="gigs-organisieren" class="anchor" href="#gigs-organisieren"><span class="octicon octicon-link"></span></a>Gigs organisieren!</h2>
+
+<h3>
+<a name="bald-schneller-und-einfacher" class="anchor" href="#bald-schneller-und-einfacher"><span class="octicon octicon-link"></span></a>Bald schneller und einfacher...</h3>
+
+<p>Wir arbeiten hart daran, Dir als Musiker wieder mehr Zeit für das zu verschaffen, was Du am liebsten tust: Musik machen! Gehöre zu den ersten, die Gixtra nutzen. Hinterlasse Deine Email und wir benachrichtigen Dich pünktlich zum Start der Software.</p>
       </section>
     </div>
 
