--- a/impressum.html
+++ b/impressum.html
@@ -1,13 +1,22 @@
+---
+layout: default
+---
+
 <h1>Impressum</h1><p>Angaben gemäß § 5 TMG:<br/><br/></p>
 <p>Matthias Orgler<br />
 Kohlbrandstr. 20<br />
 60385 Frankfurt<br />
 </p>
+
 <h2>Kontakt:</h2>
-<table>
-<tr><td><p>E-Mail:</p></td>
-<td><p>matthias@orgler.de</p></td>
-</tr></table>
+<p>
+  E-Mail: 
+  <span style="unicode-bidi:bidi-override; direction: rtl;">
+    moc.artxig@ofni
+  </span>
+</p>
+
+
 <p> </p>
 <p>Quelle: <i><a rel="nofollow" href="http://www.e-recht24.de/impressum-generator.html">http://www.e-recht24.de</a></i></p>
 <h2>Datenschutzerklärung:</h2>
