set links to start page

--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
-<h2>MAIN CONTENT</h2>
+<h2>
+<a name="gigs-organisieren" class="anchor" href="#gigs-organisieren"><span class="octicon octicon-link"></span></a>Gigs organisieren!</h2>
+
+<h3>
+<a name="bald-schneller-und-einfacher" class="anchor" href="#bald-schneller-und-einfacher"><span class="octicon octicon-link"></span></a>Bald schneller und einfacher...</h3>
+
+<p>Wir arbeiten hart daran, Dir als Musiker wieder mehr Zeit für das zu verschaffen, was Du am liebsten tust: Musik machen! Gehöre zu den ersten, die Gixtra nutzen. Hinterlasse Deine Email und wir benachrichtigen Dich pünktlich zum Start der Software.</p>
